<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="3"
    android:layout_column="3"
    android:padding="5dp"
    android:pointerIcon="zoom_in"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp" />

            <TextView
                android:id="@+id/fromTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_0"
                android:padding="15dp"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textSize="48sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp" />

            <TextView
                android:id="@+id/toTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_0"
                android:padding="15dp"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textSize="48sp" />

        </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/_7"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/_8"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/_9"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/_4"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/_5"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/_6"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/_1"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/_2"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/_3"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/dot"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:text="@string/_0"
            android:textSize="24sp"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10sp"
            android:contentDescription="@string/app_name"
            android:text="@string/empty"
            android:textSize="24sp"
            app:icon="@drawable/baseline_backspace_24"
            app:layout_constraintWidth_percent="0.33"
            tools:ignore="VisualLintButtonSize" />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>